--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,18 +1,9 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-    </style>
-
-
     <style name="HomeBtn">
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">18sp</item>
         <item name="android:layout_margin">3dp</item>
-        <item name="android:textColor">@color/common_white</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:background">@drawable/home_activity_btn_bg</item>
+        <item name="android:textColor">@android:color/white</item>
     </style>
 </resources>
