--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -3,22 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@mipmap/home_activity_bg"
     android:gravity="center"
     android:orientation="vertical">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/common_200dp">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="@string/app_name"
-            android:textSize="48sp"
-            android:textStyle="bold"/>
-
-    </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,25 +15,35 @@
         android:gravity="center"
         android:orientation="vertical">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:paddingBottom="30dp"
+            android:paddingTop="30dp"
+            android:text="@string/app_name"
+            android:textColor="#dddddd"
+            android:textSize="42sp"
+            android:textStyle="bold"/>
+
         <Button
             android:id="@+id/btn_new_game"
             style="@style/HomeBtn"
-            android:layout_width="@dimen/common_180dp"
+            android:layout_width="@dimen/home_btn_width"
             android:layout_height="wrap_content"
             android:text="@string/new_game"/>
 
         <Button
             android:id="@+id/btn_best_score"
             style="@style/HomeBtn"
-            android:layout_width="@dimen/common_180dp"
+            android:layout_width="@dimen/home_btn_width"
             android:layout_height="wrap_content"
             android:text="@string/best_score"/>
-
 
         <Button
             android:id="@+id/btn_quit"
             style="@style/HomeBtn"
-            android:layout_width="@dimen/common_180dp"
+            android:layout_width="@dimen/home_btn_width"
             android:layout_height="wrap_content"
             android:text="@string/quit"/>
     </LinearLayout>
