--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/home_activity_bg"
+    android:background="@drawable/activity_home_bg"
     android:gravity="center"
     android:orientation="vertical">
 
@@ -19,31 +19,29 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:paddingBottom="30dp"
-            android:paddingTop="30dp"
+            android:layout_marginBottom="60dp"
             android:text="@string/app_name"
             android:textColor="#dddddd"
-            android:textSize="42sp"
-            android:textStyle="bold"/>
+            android:textSize="36sp"/>
 
         <Button
             android:id="@+id/btn_new_game"
             style="@style/HomeBtn"
-            android:layout_width="@dimen/home_btn_width"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/new_game"/>
 
         <Button
             android:id="@+id/btn_best_score"
             style="@style/HomeBtn"
-            android:layout_width="@dimen/home_btn_width"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/best_score"/>
 
         <Button
             android:id="@+id/btn_quit"
             style="@style/HomeBtn"
-            android:layout_width="@dimen/home_btn_width"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/quit"/>
     </LinearLayout>
