--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -18,5 +18,5 @@
 
     </LinearLayout>
 
-    <include layout="@layout/layout_ads"/>
+    <include layout="@layout/layout_ads_50"/>
 </LinearLayout>
