--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -46,5 +46,5 @@
             android:text="@string/quit"/>
     </LinearLayout>
 
-    <include layout="@layout/layout_ads"/>
+    <include layout="@layout/layout_ads_50"/>
 </LinearLayout>
